# penrose

./: .gitignore  404.html  Cargo.toml  LICENSE  Makefile  README.md  TODO  TODO.md  api_changes.md  faq.html  flake.nix  getting-started.html  index.html  introduction.html  print.html  run-penrose.sh  rustfmt.toml  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/danger/: dangerfile.ts  package.json  tsconfig.json
.github/workflows/: book.yml  danger.yml  dummy.yaml  rust.yml
building/: actions.html  index.html  layouts.html
builtin/: actions.html  index.html  layouts.html  ui.html
crates/penrose_bar/: Cargo.toml  README.md
crates/penrose_keysyms/: Cargo.toml  README.md
crates/penrose_keysyms/src/: lib.rs
crates/penrose_menu/: Cargo.toml  README.md
crates/penrose_proc/: Cargo.toml  README.md
crates/penrose_proc/src/: lib.rs  stub.rs  validate_bindings.rs
crates/penrose_proc/tests/: runner.rs  stub_test_only.rs  stubbed_companion.rs
crates/penrose_proc/tests/derive/: defaults-impls-are-copied.rs  meta-args-reject-correctly.rs  meta-args-reject-correctly.stderr  stub-trait-is-generated.rs
crates/penrose_proc/tests/stub/: bounds-are-maintained.rs  bounds-are-maintained.stderr  custom-prefix-accepted.rs  meta-args-reject-correctly.rs  meta-args-reject-correctly.stderr  original-trait-maintained.rs  stub-impls-satisfy-bounds.rs  stub-trait-is-generated.rs  test-only-attr-works.rs  test-only-attr-works.stderr  visibility-is-correct-failure.rs  visibility-is-correct-failure.stderr  visibility-is-correct.rs
crates/penrose_proc/tests/validate_bindings/: bindings-clashing-with-templates-are-rejected.rs  bindings-clashing-with-templates-are-rejected.stderr  invalid-keys-are-rejected.rs  invalid-keys-are-rejected.stderr  invalid-keys-with-modifiers-are-rejected.rs  invalid-keys-with-modifiers-are-rejected.stderr  invalid-modifiers-are-rejected.rs  invalid-modifiers-are-rejected.stderr  invalid-templates-are-rejected.rs  invalid-templates-are-rejected.stderr  keys-cannot-be-used-as-modifiers.rs  keys-cannot-be-used-as-modifiers.stderr  repeated-bindings-are-rejected.rs  repeated-bindings-are-rejected.stderr  templates-work-with-raw-bindings.rs  valid-bindings-are-accepted.rs  valid-template-bindings-are-accepted.rs
crates/penrose_ui/: Cargo.toml  LICENSE  README.md
crates/penrose_ui/examples/: layout-render.rs  polygon-demo.rs  txt-demo.rs
crates/penrose_ui/src/: layout_viewer.rs  lib.rs
crates/penrose_ui/src/bar/: mod.rs  schedule.rs
crates/penrose_ui/src/bar/widgets/: debug.rs  mod.rs  simple.rs  sys.rs  workspaces.rs
crates/penrose_ui/src/core/: fontset.rs  mod.rs
crates/penrose_ui/src/systray/: dwm.diff  mod.rs
diagrams/: README.md  hooks.dot  state.dot
docs/: README.md  book.toml  faq.md  getting_started.md  migrating_01_to_02.md
docs/src/: SUMMARY.md  faq.md  getting-started.md  introduction.md
examples/: bsp-test.rs  main.rs
examples/draw/: main.rs
examples/dynamic_workspaces/: main.rs  ws_spawm.sh
examples/ewmh_compatability/: main.rs
examples/minimal/: main.rs
examples/scratchpads/: main.rs
examples/simple_config_with_hooks/: main.rs
examples/status_bar/: main.rs
examples/with_layout_transformers/: main.rs
extensions/: event-hooks.html  ewmh.html  hooks.html  index.html  manage-hooks.html  refresh-hooks.html  startup-hooks.html
original/src/: actor.rs  macros.rs
original/tests/: hook_tests.rs  serialization_tests.rs
overview/: actions.html  data-structures.html  hooks.html  index.html  layouts.html  pure-vs-x.html
rustdoc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
rustdoc/penrose/: all.html  enum.Error.html  index.html  macro.custom_error!.html  macro.custom_error.html  macro.impl_message!.html  macro.impl_message.html  macro.manage_hooks!.html  macro.manage_hooks.html  macro.map.html  macro.simple_transformer!.html  macro.simple_transformer.html  macro.stack.html  sidebar-items.js  struct.Color.html  struct.Xid.html  type.Result.html
rustdoc/penrose_keysyms/: all.html  enum.XKeySym.html  index.html  sidebar-items.js  struct.XKeySymIter.html
rustdoc/penrose_ui/: all.html  enum.Error.html  fn.status_bar.html  index.html  sidebar-items.js  type.Result.html
scripts/: cargo-lint  cargo-watch  xephyr.sh
src/: __example_helpers.rs  __test_helpers.rs  actions.rs  actor.rs  bindings.rs  client.rs  config.rs  core.rs  data_types.rs  draw.rs  geometry.rs  getting-started.md  handle.rs  helpers.rs  hooks.rs  layout.rs  lib.rs  macros.rs  main.rs  manager.rs  monitor.rs  penrose.rs  screen.rs  stack.rs  state.rs  util.rs  workspace.rs  x.rs  xconnection.rs
src/bindings/: handlers.rs  mod.rs
src/builtin/: actions.rs  hooks.rs  mod.rs
src/common/: geometry.rs  mod.rs
src/contrib/: actions.rs  hooks.rs  layouts.rs  mod.rs
src/core/: actions.rs  bindings.rs  client.rs  config.rs  data_types.rs  handle.rs  helpers.rs  hooks.rs  layout.rs  macros.rs  manager.rs  mod.rs  ring.rs  screen.rs  workspace.rs  xconnection.rs
src/draw/: bar.rs  colorscheme.rs  font.rs  mod.rs  text.rs
src/dwm-inspired/: config.rs  lib.rs  manager.rs  penrose.rs  util.rs  x.rs
src/example/: main.rs
src/extensions/: ewmh.rs  layout.rs  mod.rs
src/input/: mod.rs
src/layout/: messages.rs  mod.rs  transformers.rs
src/layouts/: layout.rs  mod.rs
src/output/: mod.rs  monitor.rs
src/overview/: hooks.md  index.md  pure-vs-x.md
src/pure/: diff.rs  geometry.rs  mod.rs  screen.rs  stack.rs  stack_set.rs  workspace.rs
src/stack_set/: mod.rs  screen.rs  stack.rs  stack_set.rs  workspace.rs
src/state/: mod.rs  screen.rs  stack.rs  stack_set.rs  state.rs  workspace.rs
src/ui/: draw-and-context.md  index.md  status-bar.md
src/wayland/: input.rs  mod.rs  state.rs
src/x/: atom.rs  event.rs  mock.rs  mod.rs  property.rs  query.rs
src/x11rb/: atom.rs  common.rs  conversions.rs  draw.rs  event.rs  mod.rs  (+1 more)
tests/: hook_tests.rs  layout.rs  serialization_tests.rs
ui/: draw-and-context.html  index.html  status-bar.html
(+662 files in other folders)
