[package]
name = "penrose"
version = "0.3.2"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose"
readme = "README.md"
description = "A tiling window manager library inspired by dwm and xmonad"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "windowmanager", "window", "manager", "x11" ]
categories = [ "window manager" ]

[workspace]
members = [
  "crates/penrose_ui",
  "crates/penrose_keysyms"
]

[features]
default = ["x11rb-xcb", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]

[dependencies]
penrose_keysyms = { version = "0.1.1", path = "crates/penrose_keysyms", optional = true }
# penrose_proc = { version = "0.1.3", path = "crates/penrose_proc" }

bitflags = "2.3"
nix = "0.26"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }

serde = { version = "1.0", features = ["derive"], optional = true }
x11rb = { version = "0.12", features = ["randr"], optional = true }
anymap = "0.12"

[dev-dependencies]
paste = "1.0.13"
penrose_ui = { path = "crates/penrose_ui" }
serde_json = "1.0.100"
simple_test_case = "1.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
