[package]
name = "penrose"
version = "0.3.4"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose"
readme = "README.md"
description = "A tiling window manager library inspired by dwm and xmonad"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "windowmanager", "window", "manager", "x11" ]
categories = [ "window manager" ]

[workspace]
members = [
  "crates/penrose_ui",
  "crates/penrose_keysyms"
]

[features]
default = ["x11rb", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]

[dependencies]
anymap = "0.12"
bitflags = { version = "2.3", features = ["serde"] }
nix = { version = "0.26", default-features = false, features = ["signal"] }
penrose_keysyms = { version = "0.3.4", path = "crates/penrose_keysyms", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
x11rb = { version = "0.12", features = ["randr"], optional = true }

[dev-dependencies]
paste = "1.0.13"
penrose_ui = { path = "crates/penrose_ui" }
serde_json = "1.0.100"
simple_test_case = "1.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
