[package]
name = "penrose"
version = "0.3.6"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose"
readme = "README.md"
description = "A tiling window manager library inspired by dwm and xmonad"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "wm", "windowmanager", "window", "manager", "x11" ]

[workspace]
members = [
  "crates/penrose_ui",
  "crates/penrose_keysyms"
]

[features]
default = ["x11rb", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]

[dependencies]
anymap = "0.12"
bitflags = { version = "2.5", features = ["serde"] }
nix = { version = "0.29", default-features = false, features = ["signal"] }
penrose_keysyms = { version = "0.3.6", path = "crates/penrose_keysyms", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
x11rb = { version = "0.13", features = ["randr"], optional = true }

[dev-dependencies]
penrose_ui = { path = "crates/penrose_ui" }
serde_json = "1"
simple_test_case = "1"
quickcheck = "1"
quickcheck_macros = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
simple_txtar = "0.1.0"
pretty_assertions = "1.4.0"
