[package]
name = "penrose_proc"
version = "0.1.2"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose_proc"
readme = "README.md"
description = "proc-macros for the Penrose tiling window manager library"
keywords = [ "windowmanager", "window", "manager", "x11", "procmacro" ]

[lib]
proc-macro = true

[dev-dependencies]
rustversion = "1.0"
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["fold", "full"] }
quote = "1.0"
proc-macro2 = "1.0"

penrose_keysyms = { version = "0.1.0", path = "../penrose_keysyms" }
strum = "0.19.2"
