[package]
name = "penrose_proc"
version = "0.1.3"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose_proc"
readme = "README.md"
description = "proc-macros for the Penrose tiling window manager library"
keywords = [ "windowmanager", "window", "manager", "x11", "procmacro" ]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.42"

[dependencies]
syn = { version = "1.0.70", features = ["fold", "full"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"

penrose_keysyms = { version = "0.1.1", path = "../penrose_keysyms" }
strum = "0.20.0"
rustversion = "1.0.4"
