[package]
name = "penrose_proc"
version = "0.1.3"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose_proc"
readme = "README.md"
description = "proc-macros for the Penrose tiling window manager library"
keywords = [ "windowmanager", "window", "manager", "x11", "procmacro" ]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.56"

[dependencies]
syn = { version = "1.0.86", features = ["fold", "full"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"

penrose_keysyms = { version = "0.1.1", path = "../penrose_keysyms" }
strum = "0.24.0"
rustversion = "1.0.6"
