[package]
name = "penrose_ui"
version = "0.3.5"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/penrose/crates/penrose_ui"
documentation = "https://docs.rs/penrose_ui"
readme = "README.md"
description = "UI elements for the penrose window manager library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { version = "0.3.5", path = "../../" }
tracing = { version = "0.1", features = ["attributes"] }
thiserror = "1.0"
yeslogic-fontconfig-sys = "5.0"
x11 = { version = "2.21", features = ["xft", "xlib"] }

[dev-dependencies]
anyhow = "1"
